Got rid of the VjComponents.UI.Widgets.LinkedList class.  This was a holdover from the days when we were trying to maintain jdk1.1 compat- ibility, and thus couldn't use the collections classes.  Happily, those days are long past.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@6272 08b38cba-cd3b-11de-854e-f91c5b6e4272